# context-guardian

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
mcp/: package.json  server.mjs
relay/: .env.example  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.runtime  README.md  README.zh-CN.md  compose.yaml
relay/site/: index.html
relay/src/: lib.rs
scripts/: image-tunnel.sh  install.sh  passive-capture-service.sh  relay-client.sh  service.sh  setup-blind-relay.sh  setup-public-relay.sh
skill/context-guardian/: SKILL.md
skill/context-guardian/agents/: openai.yaml
skill/context-guardian/references/: recovery-model.md
skill/context-guardian/scripts/: context_guardian.sh
src/: lib.rs  main.rs  message_format.rs  passive_capture.rs
