[package]
name = "context-guardian"
version = "0.3.0"
edition = "2021"

[dependencies]
serde_json = "1"
ureq = { version = "2", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
