[package]
name = "context-guardian"
version = "0.4.1"
edition = "2021"

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
libc = "0.2"
sha2 = "0.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
