[package]
name = "context-relay"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "net", "signal"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[[bin]]
name = "context-relay-server"
path = "src/bin/server.rs"

[[bin]]
name = "context-relay-client"
path = "src/bin/client.rs"
